Getting somewhere with the PATCH
- Remove balance_updated_at
